--- a/views/categories.ejs
+++ b/views/categories.ejs
@@ -16,6 +16,17 @@
       <img src="/img/<%- category.image %>" alt="<%- category.name %>" loading="lazy" />
     </div>
     <div class="pt-1"><%- category.name %></div>
+    <div class="pt-1"><%- category.description %></div>
   </a>
-  <% }) %> <% } %>
+  <% }) %> <% } else if(typeof food !== 'undefined' && food.length > 0) { %> <%
+  food.forEach(function(recipe, index){ %>
+  <a href="/recipe/<%= recipe._id %>" class="col text-center category__link">
+    <div class="category__img category__img--large shadow">
+      <img src="/img/<%= recipe.image %>" alt="<%= recipe.name %>" loading="lazy" />
+    </div>
+    <div class="pt-1"><%= recipe.name %></div>
+  </a>
+  <% }) %> <% } else { %>
+  <p>No items found.</p>
+  <% } %>
 </div>
